# gen_id_enum_derive

./: Cargo.toml
derive_test/: Cargo.toml
derive_test/src/: lib.rs
macro_test/src/: lib.rs
src/: input.rs  lib.rs
